# fastapi-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  Dockerfile  README.md  llms.txt  main.py  pyproject.toml  sonar-project.properties
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: celery.py  conftest.py  fastapi.py  main.py  web_app.py  worker.py  worker_app.py
app/config/: audit_log.py  auth.py  background.py  cache.py  celery.py  celery_app.py  database.py  exceptions.py  logging.py  openapi.py  otel.py  pagination.py  rate_limit.py  rate_limiter.py  settings.py  timezone.py
app/config/tests/: test_auditlog.py  test_auth.py  test_background.py  test_cache.py  test_celery_app.py  test_database.py  test_exceptions.py  test_helpers.py  test_openapi.py  test_otel.py  test_rate_limit.py  test_settings.py
app/core/: audit_log.py  auth.py  background.py  cache.py  database.py  email_sender.py  exceptions.py  feature_flags.py  health.py  helpers.py  logging.py  openapi.py  otel.py  pagination.py  preferences.py  rate_limit.py  settings.py  storage.py  timezone.py
app/core/emails/: base.html  base.mjml
app/core/tests/: test_auditlog.py  test_auth.py  test_background.py  test_cache.py  test_database.py  test_email_sender.py  test_exceptions.py  test_feature_flags.py  test_health.py  test_helpers.py  test_logging.py  test_openapi.py  test_otel.py  test_preferences.py  test_rate_limit.py  test_settings.py  test_storage.py  test_timezone.py
app/features/: api.py  model_registry.py  models.py  router_registry.py  task_registry.py  tasks.py  view_registry.py  views.py
app/features/audit_log/: audit_log.py  models.py
app/features/audit_logs/models/: audit_log.py
app/features/notifications/: api.py  models.py  router.py  tasks.py  test_notifications.py
app/features/notifications/models/: notification.py  notification_delivery.py
app/features/notifications/services/common/: detail_notification.py  get_notification_summary.py  list_notifications.py  read_all_notifications.py  read_notification.py  unread_notification.py
app/features/notifications/tests/: fixtures.py  test_view_crud_notifications.py  test_view_notifications.py
app/features/notifications/views/: crud_notifications.py  notifications.py
app/features/preferences/: api.py
app/features/preferences/models/: preference.py
app/features/users/: api.py  helpers.py  models.py  router.py  tasks.py  urls.py  views.py
app/features/users/models/: user.py  user_action.py
app/features/users/models/tests/: test_model_user.py  (+1 more)
app/features/users/services/: change_password.py  delete_user.py  detail_user.py  get_me.py  list_users.py  login.py  refresh_tokens.py  register.py  reset_password.py  reset_password_confirm.py  send_email_verification_email.py  send_password_reset_email.py  update_users.py  verify_email_confirm.py
app/features/users/tasks/: __init__.py  echo.py  email_verification.py  password_reset.py  welcome.py  welcome_email.py
app/features/users/tests/: fixtures.py  test_login.py  test_model_user.py  test_model_useraction.py  test_model_useremailverification.py  test_service_change_password.py  test_service_delete_user.py  test_service_detail_user.py  test_service_list_users.py  test_service_login.py  test_service_register.py  test_service_reset_password.py  test_service_send_email_verification_email.py  test_service_send_password_reset_email.py  test_service_update_user.py  test_service_verify_email_confirm.py  test_task_email_verification.py  test_task_password_reset.py  test_view_change_password.py  test_view_crud_users.py  test_view_login.py  test_view_me.py  test_view_refresh.py  test_view_register.py  test_view_reset_password.py  test_view_reset_password_confirm.py  test_view_users.py  test_view_verify_email.py  test_view_verify_email_confirm.py
app/features/users/views/: change_password.py  crud_users.py  get_me.py  login.py  me.py  refresh.py  refresh_tokens.py  register.py  reset_password.py  reset_password_confirm.py  users.py  verify_email.py  verify_email_confirm.py
app/fixtures/: email_factory.py  notification_delivery_factory.py  notification_factory.py  preference_factory.py  user_action_factory.py  user_factory.py
app/migrations/: env.py  script.py.mako
app/migrations/versions/: 20251223_1310_1562821e8c45_add_initial_user_table.py  20251223_1342_18ff26d7e9b4_add_initial_notification_table.py  20251223_1342_cbeb6b3e94cd_add_initial_audit_log_table.py  20251223_1439_219d937b4488_add_initial_user_table.py  20251223_1440_569d31d15a62_add_initial_notification_table.py  20251223_1440_a9dbf1469664_add_initial_audit_log_table.py  20251223_1454_1a13b2508355_change_notification_status_enum.py  20251224_0037_326c0d33e8c5_add_user_type_for_users.py  20251224_0101_fa64084ba04d_add_email_and_date_joined_fields_to_user.py  20251224_0232_7571cbcca1dc_add_initial_user_verification_table.py  20251224_1050_2d48d95e87d8_add_notification_status_enum.py  20251224_1108_572387925aee_rename_user_verification_table_to_user_.py  20251224_1624_62063851dee2_add_initial_user_and_user_action_tables.py  20251224_1625_97e7f834a7d6_add_initial_notification_tables.py  20251224_1626_06f5f77c1299_add_initial_audit_log_table.py  20251225_1426_c5fc9a287198_add_initial_user_table.py  20251225_1427_81e7b404e9d7_add_initial_notification_tables.py  20251225_1428_f3569a676068_add_initial_audit_log_table.py  20251225_1429_5b51196b0a2c_add_initial_user_action_table.py  20251231_1328_55510f907102_add_profile_image_field_for_user.py  20260102_1522_b34dec213535_add_initial_preferences_model.py  287a9cf85d43_audit_log_model.py  34e27435b5ca_add_notifications_tables.py  4b36299df787_audit_log_model.py  56464f5136b8_audit_log_model.py  642da80b7053_add_notification_tables.py  8fe065d4a4de_add_notification_tables.py  9d6cf2dfa61b_add_notifications_tables.py  c759d7fb8332_add_initial_user_table.py  c934278fd941_describe_change.py  cdcf16f0df61_audit_log_model.py  d814ff784106_add_notification_tables.py  e6fa6adb131c_add_notifications_tables.py
app/tests/: conftest.py
(+53 files in other folders)
