[project]
name = "sample-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.124.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.45",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
]


[tool.ruff]
line-length = 120


[tool.alembic]
script_location = "%(here)s/app/migrations"
prepend_sys_path = ["."]


[tool.mypy]
plugins = ["pydantic.mypy"]
