[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache>=0.12.3",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "alembic-postgresql-enum>=1.8.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "celery>=5.6.0",
    "deepdiff>=8.6.1",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.124.2",
    "greenlet>=3.3.0",
    "limits>=5.6.0",
    "orjson>=3.11.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-json-logger>=4.0.0",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "celery-types>=0.23.0",
    "factory-boy>=3.3.3",
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.8",
    "time-machine>=3.1.0",
]
opentelemetry = [
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-asyncio>=0.60b1",
    "opentelemetry-instrumentation-celery>=0.60b1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-logging>=0.60b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.60b1",
    "opentelemetry-instrumentation-sqlite3>=0.60b1",
    "opentelemetry-instrumentation-starlette>=0.60b1",
    "opentelemetry-instrumentation-threading>=0.60b1",
    "opentelemetry-instrumentation-urllib>=0.60b1",
    "opentelemetry-instrumentation-urllib3>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
]

[tool.uv]
default-groups = ["opentelemetry", "dev"]

[tool.ruff]
line-length = 120

[tool.alembic]
script_location = "%(here)s/app/migrations"
prepend_sys_path = ["."]
file_template = "%%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d_%%(rev)s_%%(slug)s"

[tool.mypy]
plugins = ["pydantic.mypy"]
check_untyped_defs = true

[tool.coverage.run]
concurrency = ["greenlet", "thread"]

[[tool.mypy.overrides]]
module = ["aiocache.*"]
follow_untyped_imports = true
