[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiocache>=0.12.3",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "alembic-postgresql-enum>=1.8.0",
    "apache-libcloud>=3.8.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "celery>=5.6.0",
    "deepdiff>=8.6.1",
    "email-validator>=2.3.0",
    "fast-depends>=3.0.5",
    "fastapi[standard]>=0.124.2",
    "fasteners>=0.20",
    "greenlet>=3.3.0",
    "jinja2>=3.1.6",
    "limits>=5.6.0",
    "mjml-python>=1.3.7",
    "orjson>=3.11.5",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.20",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-file>=0.6.0",
]

[dependency-groups]
dev = [
    "celery-types>=0.23.0",
    "factory-boy>=3.3.3",
    "httpx>=0.28.1",
    "pre-commit>=4.5.0",
    "pyright[nodejs]>=1.1.407",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.8",
    "time-machine>=3.1.0",
    "types-factory-boy>=0.4.1",
]
opentelemetry = [
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-asyncio>=0.60b1",
    "opentelemetry-instrumentation-celery>=0.60b1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-logging>=0.60b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.60b1",
    "opentelemetry-instrumentation-sqlite3>=0.60b1",
    "opentelemetry-instrumentation-starlette>=0.60b1",
    "opentelemetry-instrumentation-threading>=0.60b1",
    "opentelemetry-instrumentation-urllib>=0.60b1",
    "opentelemetry-instrumentation-urllib3>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
]

[tool.uv]
default-groups = ["opentelemetry", "dev"]

[tool.ruff]
line-length = 120

[tool.alembic]
script_location = "%(here)s/app/migrations"
prepend_sys_path = ["."]
file_template = "%%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d_%%(rev)s_%%(slug)s"

[tool.pyright]
ignore = ["**/app/migrations/versions/**"]

# To make sure pre-commit works well with pyright
# https://github.com/RobertCraigie/pyright-python?tab=readme-ov-file#pre-commit
venvPath = "."
venv = ".venv"

# ----- Base strict type checking mode
typeCheckingMode = "strict"
reportUnknownVariableType = "none" # factories and 3rd party libs return unknown types
reportMissingTypeStubs = "none" # some dependencies do not have type stubs
# ----- Following rules are additional rules not included in "strict" mode
reportCallInDefaultInitializer = "error"
reportImplicitOverride = "error"
reportImplicitStringConcatenation = "error"
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnreachable = "error"
reportUnusedCallResult = "error"
reportImportCycles = "none" # required for models with circular imports
reportUnusedImport = "none" # handled by ruff and ignored with F401
reportUnknownArgumentType = "none" # alembic generated code is not compatible

[tool.coverage.run]
concurrency = ["greenlet", "thread"]
relative_files = true
